# audix

./: .dockerignore  .gitignore  Dockerfile  compose.yaml  entrypoint.sh  pyproject.toml
audix/: database.py  main.py  main_router.py  settings.py  setup.py
audix/auth/: hash.py  router.py  service.py  token.py
audix/episodes/: models.py  router.py  schemas.py  service.py
audix/playlists/: models.py  router.py  schemas.py  service.py
audix/podcasts/: enums.py  models.py  router.py  schemas.py  service.py  types.py
audix/shared/: errors.py  permissions.py  types.py
audix/shared/minio/: client.py  service.py
audix/shared/mixins/: timestamp.py
audix/users/: enums.py  errors.py  models.py  router.py  schemas.py  service.py
migrations/: env.py
migrations/versions/: 20e6c39085be_cria_tabela_de_users.py  2cd78314744c_tabela_de_progresso_de_ep.py  3170acd36455_criando_tabela_de_likes.py  c1e00b6dc82f_criando_tabela_de_episodios.py  cdba22337436_criando_tabela_de_playlists.py  e27963227acb_criando_tabela_de_podcasts.py
